--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -33,9 +33,7 @@
     <%= f.label "Trailer Height" %><br />
     <%= f.text_field :trailer %>
    <% else %>
-           <%= f.label "Trailer Height" %><br />
-               <%= f.text_field "None" %>
-
+          console.log("error");
     </div>
    <% end %>
   
