--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -30,7 +30,7 @@
 </p>
 
 
-<%= link_to 'Edit Vehcile', edit_vehicle_path(@vehicle) %> |
+<%= link_to 'Edit Vehicle', edit_vehicle_path(@vehicle) %> |
 <% if !signed_in? %>
     <%= link_to 'Home', pages_home_path %>
      <% else %>
