--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,177 +1,8 @@
 <center>
-<h1>Plan you journey</h1>
+<h1>Help</h1>
 
- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<p> This application was designed to aid Heavy Goods Vehicles create a route based on the height of their vehicle.</p> <br />
 
-
-
-
-<script>
-var rendererOptions = {
-  draggable: true
-};
-var directionsDisplay = new google.maps.DirectionsRenderer(rendererOptions);;
-var directionsService = new google.maps.DirectionsService();
-var map;
-
-var middleMap = new google.maps.LatLng(53.424878,-7.940766);
-
-
-function initialize() {
-
-  var mapOptions = {
-    zoom: 7,
-    center: middleMap
-  };
-  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-  <% @markers.each do |m| %>                  
-    var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
-    var myHeight = <%= m.height %>;
-    var marker = new google.maps.Marker({position:bridge});
-    marker.setMap(map);
- 
-
-
- if (myHeight == "0") {
-        var bridgeType =  '<th scope="row">Width:</th>  <td> <b><i> Narrow</i> </b></td>'
-    } else {
-     bridgeType =  '<th scope="row">Height:</th>  <td id= "mytd">' + myHeight +' m </td>'
-         }
-
-
-var contentString = '<div class="infowin">' +
-        '<h5 id="h5style">Bridge Details</h5>' +
-        '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
-        '<tr>' +
-         '<th scope="row">Address:</th>' +
-      '<td>' + "ERROR" + '</td>' +
-      '</tr>' +
-      '<th scope="row">County:</th>' +
-      '<td>' + "ERROR" + '</td>' +
-      '</tr>' + bridgeType +'</tr>' +
-      '<th scope="row">Latitude:</th>' +
-      '<td>' + <%= m.latitude %> + '<br />' +
-      '</tr>' +
-      '<th scope="row">Longitude:</th>' +
-      '<td>' + <%= m.longitude %> +
-      '</tr>' +
-      '</table>' +
-      '</div>';
-var infoWindow =  new google.maps.InfoWindow;
-bindInfoW(marker, contentString, infoWindow);
- 
-  <% end %>
-
-
-
-function bindInfoW(marker, contentString, infoWindow) {
-  google.maps.event.addListener(marker, 'click', function() {
-    infoWindow.setContent(contentString);
-    infoWindow.open(map, marker);
-  });
- }
-  directionsDisplay.setMap(map);
-  directionsDisplay.setPanel(document.getElementById('directionsPanel'));
-
-
-  google.maps.event.addListener(directionsDisplay, 'directions_changed', function() {
-    computeTotalDistance(directionsDisplay.getDirections());
-  });
-
-}
-
-
-function calcRoute() {
-
-  var startPoint = document.getElementById("start").value
-  var endPoint = document.getElementById("dest").value
-  var stopPoint = document.getElementById("stop").value
-  
-  
-  var request = {
-    origin: startPoint,
-    destination: endPoint,
-  //if(stopPoint !=null) {
-    waypoints:[{location: stopPoint}],
-  //}
-  //else {
-  //  alert("Please add stop off point!");
-  //  }
-  travelMode: google.maps.TravelMode.DRIVING
-  };
-  directionsService.route(request, function(response, status) {
-    if (status == google.maps.DirectionsStatus.OK) {
-      directionsDisplay.setDirections(response);
-    }
-  });
-}
-
-  var bridge2 = new google.maps.LatLng(52.5, -8.1);
-  var marker2 = new google.maps.Marker({position:bridge2});
-	
-function computeTotalDistance(result) {
-  var total = 0;
-  var myroute = result.routes[0];
-  for (var i = 0; i < myroute.legs.length; i++) {
-    total += myroute.legs[i].distance.value;
-
-    var stlat = myroute.legs[i].start_location.lat().toFixed(3);
-    var stlng = myroute.legs[i].start_location.lng().toFixed(3);
-    var endlat = myroute.legs[i].end_location.lat().toFixed(3);
-    var endlng = myroute.legs[i].end_location.lng().toFixed(3);
-    document.getElementById('stlat').innerHTML = "Start Lat: " + stlat;
-    document.getElementById('stlng').innerHTML = "Start Lng: " + stlng;  
-    document.getElementById('endlat').innerHTML = "End Lat: " + endlat;
-    document.getElementById('endlng').innerHTML = "End Lng: " + endlng;  
-    if(bridge2.lat() < stlat && bridge2.lat() > endlat && bridge2.lng() < stlng && bridge2.lng() > endlng) {
-      document.getElementById('aaa').innerHTML = "Success! Lat:" + bridge2.lat() + " Lng:" + bridge2.lng();
-    } else {
-      document.getElementById('aaa').innerHTML = "Fail! Lat:" + bridge2.lat() + " Lng:" + bridge2.lng();
-    }
-
-  }
-  total = total / 1000.0;
-  document.getElementById('total').innerHTML = "Total Distance: " + total + ' km';
-}
-  
-	  google.maps.event.addDomListener(window, 'load', initialize);
-
-    </script>
- 
-  <body>
-
-  <div style="color:#58ACFA">
-
-  <H2>  Please enter your starting point and destination </H2>
-  <form id= "routeform"> <b>
-      <label for="start">Start point:</label><input type="text" id="start" value="53.714493, -7.741307"> <br>
-      <label for="stop">Stop point:</label><input type="text" id="stop" value="Birr, Offaly"> <br>
-      <label for="dest">Destination:</label><input type="text" id="dest" value="Mallow, Cork">  <br>
-      <label for="">Vehicle:</label><input type="text" id="vehicle">  <br>
-  </b></form>
-  </div>
-    
-          <p id="p2"><b><span id="total"></span></b></p>
-          <p id="stlat"></p>
-          <p id="stlng"></p>
-           <p id="endlat"></p>
-          <p id="endlng"></p>
-           <p id="aaa"> a</p>
-
-  </form>
-    <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
-    </div>
-    <div id="map-canvas" style="float:center"> <br ></div>
-    <div id="directionsPanel" style="float:left;width:55%;height 90%"> </div>
-  <div id="textFields" style="float:right;width:20%; height:90%"> </div>
-
- </center>
-
-
- <div style="float:right;width:45%; height:50%">
-  <a class="twitter-timeline" href="https://twitter.com/aaroadwatch" data-widget-id="433665295937327104" style="float:left;">Tweets by @aaroadwatch</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<a class="twitter-timeline" href="https://twitter.com/GardaTraffic" data-widget-id="433673439446962176">Tweets by @GardaTraffic</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
-</div>
-</body>
+<p>The map below shows a map containing every bridge location in the Republic of Ireland</p> <br />
+<%= image_tag("bridge1.png", :size => "350x450") %>
+   
