--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,15 +1,10 @@
-<c<h1>Admin test page </h1>
+<h1>Admin test page </h1>
 <br>
 
  <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Route Planner Pro</title>
-
-
-<p>The map below shows a map containing every bridge location in the Republic of Ireland</p>
-<%= image_tag("bridge1.png", :size => "350x450") %>
-   
 
 
 <center>
@@ -27,7 +22,6 @@ var map;
 //routeboxer
 var boxpolys = null;
 var routeBoxer = null;
-var distance = .5;
 var middleMap = new google.maps.LatLng(53.424878,-7.940766);
 
 
@@ -52,6 +46,8 @@ function initialize() {
 
 function calcRoute() {
 
+  var totalCount = 0;
+  var narrowCount = 0;
     var count = 0;
     var dangercount = 0;
   <% @markers.each do |m| %>                  
@@ -68,7 +64,7 @@ function calcRoute() {
   var startPoint = document.getElementById("start").value
   var endPoint = document.getElementById("dest").value
   var stopPoint = document.getElementById("stop").value
-  
+  var distance =  document.getElementById("accuracy").value
 
   var request = {
     origin: startPoint,
@@ -88,6 +84,8 @@ function calcRoute() {
           drawBoxes(boxes);
       document.getElementById('points').innerHTML = "<b>Points along this route:  (" + path.length + " total</b>)"; //+ path;
       document.getElementById('boxes').innerHTML = "<b>Boxes along this route:  (" + boxes.length + " total</b>)"; + boxes;
+      document.getElementById('boxes').innerHTML = "<b>Boxes along this route:  (" + boxes.length + " total</b>)"; + boxes;
+
 
   var vehicleHeight = document.getElementById("vehicle").value
   var intVehicle = parseInt(vehicleHeight)
@@ -138,23 +136,44 @@ var contentString = '<div class="infowin">' +
       '</table>' +
       '</div>';
 
+var narrowString = '<div class="infowin">' +
+        '<h5 id="h5style">NARROW BRIDGE</h5>' +
+        '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
+        '<tr>' +
+      '<th scope="row">Latitude:</th>' +
+      '<td>' + <%= m.latitude %> + '<br />' +
+      '</tr>' +
+      '<th scope="row">Longitude:</th>' +
+      '<td>' + <%= m.longitude %> +
+      '</tr>' +
+      '</table>' +
+      '</div>';
+
+
 var bounds = new google.maps.LatLngBounds(southwest, northeast);
 
 var withinBox = new google.maps.Polygon({
     paths: myBox
   });
+totalCount++;
 
 if(google.maps.geometry.poly.containsLocation(bridge1, withinBox)){
   console.log("Bridge on route. Height: " + height + " meters");
     count ++;
       document.getElementById('bridgeroute').innerHTML = "Number of bridges on your route: " + count;
+      if(height == 0) {
+        narrowCount++;
+         var infowindowN = new google.maps.InfoWindow({content: narrowString});
+          infowindowN.open(map, marker1);  
+      document.getElementById('narrowbridge').innerHTML = "Number of narrow bridges on your route: " + narrowCount;
+      }
       if(height > 0){
         if (intVehicle > height) {
           dangercount ++;
           var infowindow = new google.maps.InfoWindow({content: contentString});
           infowindow.open(map, marker1);  
-            document.getElementById('bridgeroute2').innerHTML = "Number of bridges blocking your route: " + dangercount;
-
+            document.getElementById('bridgeroute2').innerHTML = "Number of bridges too low your route: " + dangercount;
+  console.log(totalCount);
         }
       }
 }
@@ -202,39 +221,39 @@ function computeTotalDistance(result) {
   total = total / 1000.0;
   document.getElementById('total').innerHTML = "Total Distance: " + total + ' km';
 }
+
   google.maps.event.addDomListener(window, 'load', initialize);
    </script>
    <body>
-
   <div style="color:#58ACFA">
+
 
   <H2>  Please enter your starting point and destination </H2>
   <form id= "routeform"> <b>
+      <div id="map-canvas" style="float:left"> <br ></div>
+      <br />
       <label for="start">Start point:</label><input type="text" id="start" value="Newbrook road, Mullingar"> <br>
       <label for="stop">Stop point:</label><input type="text" id="stop" value="Harbour Street, Mullingar"> <br>
       <label for="dest">Destination:</label><input type="text" id="dest" value="Athboy">  <br>
-      <label for="">Vehicle Height:</label><input type="text" id="vehicle" value="4">  <br>
+      <label for="">Vehicle Height(m):</label><input type="text" id="vehicle" value="4">  <br>
+      <label for="">Accuracy:(km)</label><input type="text" id="accuracy" value="1">  <br>
 
-  </b></form>
-  </div>
+
+  </b><br>
   <p id="p2"><b><span id="total"></span></b></p>
-
   <br /> <p id="points"></p>
-
   <br /> <p id="boxes"></p>
-
+  <br /> <p id="check"></p>
   <br /> <p id="bridgeroute"><br /></p>
-    <h5 id="h5style"><br /><p id="bridgeroute2"></p></h5> 
-
-  </form>
-    <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
+  <h5 id="h5style"><br /><p id="narrowbridge"></p></h5> 
+  <h5 id="h5style"><br /><p id="bridgeroute2"></p></h5> 
     </div>
-    <div id="map-canvas" style="float:center"> <br ></div>
+  </form>
     <div id="directionsPanel" style="float:left;width:55%;height 90%"> </div>
   <div id="textFields" style="float:right;width:20%; height:90%"> </div>
+      <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
+
 <div>
-
-
  </center>
 
 </body>
