--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -67,8 +67,8 @@ li a:hover {
 	overflow: hidden;
 	width: 870px;
 	height:880px;
-	margin: 10px auto;
-	padding: 10px;
+  margin: 7px;
+  padding: 5px;
 }
 * {
   margin: 0;
