--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -57,14 +57,17 @@ function calcRoute() {
   var request = {
     origin: startPoint,
     destination: endPoint,
-    waypoints:[{location: stopPoint}],
     provideRouteAlternatives: true,
     travelMode: google.maps.TravelMode.DRIVING
   };
 
+
   directionsService.route(request, function(response, status) {
     if (status == google.maps.DirectionsStatus.OK) {
       directionsDisplay.setDirections(response);
+    }
+    else {
+      alert("Invalid route, please try again");
     }
       //routeboxer
   var path = response.routes[0].overview_path;
@@ -171,7 +174,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
   <H2>  Please enter your starting point and destination </H2>
   <form id= "routeform"> <b>
-      <div id="map-canvas" style="float:left"> <br ></div>
+      <div id="map-canvas" style="float:left" padding="10px"> <br ></div>
       <br />
       <label for="start">Start point:</label><input type="text" id="start" value="Newbrook road, Mullingar"> <br>
       <label for="stop">Stop point:</label><input type="text" id="stop" value="Harbour Street, Mullingar"> <br>
@@ -182,17 +185,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </b><br>
   <p id="p2"><b><span id="total"></span></b></p>
   <p id="bridgeroute"><br /></p>
+    <p id="duration"><br /></p>
   <h5 id="h5style"><p id="bridgeroute2"></p></h5> 
   <h5 id="h5style"><p id="narrowbridge"></p></h5>
   <p id="noNarrowbridge"></p> 
   
     </div>
   </form>
-    <div id="directionsPanel" style="float:left;width:55%;height 90%"> </div>
+    <div id="directionsPanel" style="float:right;width:55%;height 90%"> </div>
   <div id="textFields" style="float:right;width:20%; height:90%"> </div>
       <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
-
-<div>
  </center>
 
 </body>
