--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -57,6 +57,7 @@ function calcRoute() {
   var request = {
     origin: startPoint,
     destination: endPoint,
+    waypoints:[{location: stopPoint}],
     provideRouteAlternatives: true,
     travelMode: google.maps.TravelMode.DRIVING
   };
@@ -192,9 +193,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
   
     </div>
   </form>
-    <div id="directionsPanel" style="float:right;width:55%;height 90%"> </div>
+        <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
+
+    <div id="directionsPanel" style="float:right;width:40%;height 90%"> </div>
   <div id="textFields" style="float:right;width:20%; height:90%"> </div>
-      <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
  </center>
 
 </body>
