--- a/app/views/markers/_form.html.erb
+++ b/app/views/markers/_form.html.erb
@@ -30,7 +30,7 @@
   <div class="field" align= "center">
     <%= f.label :longitude %><br />
     <%= f.text_field :longitude, :size=> "10"  %>
-  </div>
+  </div> <br />
   <div class="actions" align= "center">
     <%= f.submit %>
   </div> </td>
