--- a/app/views/markers/index.html.erb
+++ b/app/views/markers/index.html.erb
@@ -6,6 +6,10 @@
 </div>
 <br>
 <div>
+ <% if !adminsigned_in? %>
+      <% else %>
+<%= link_to 'Add New Bridge', new_marker_path %>
+<% end %>
 <table class="hovertable">
 
   <tr>
@@ -15,24 +19,37 @@
     <th>Latitude</th>
     <th>Longitude</th>
     <th></th>
+     <% if !adminsigned_in? %>
+      <% else %>
     <th></th>
     <th></th>
+    <% end %>
   </tr>
 
 <% @markers.each do |marker| %>
   <tr>
+    <% if !adminsigned_in? %>
+      <td> <%= marker.address %></td>
+    <% else %>
     <td><a href= <%= edit_marker_path(marker) %>> <%= marker.address %></td>
+    <% end %>
     <td><%= marker.county %></td>
-    <td><%= marker.height %></td>
+   <% if marker.height == 0 %>
+      <td> <b>Narrow Bridge </b></td>
+   <% else %>
+       <td><%= marker.height %></td>
+    <% end %>
     <td><%= marker.latitude %></td>
     <td><%= marker.longitude %></td>
     <td><%= link_to 'View', marker %></td>
+ <% if !adminsigned_in? %>
+      <% else %>
     <td><%= link_to 'Update', edit_marker_path(marker) %></td>
     <td><%= link_to 'Delete', marker, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
+<% end %>
 <% end %>
 </table>
 
 <br> 
 </div>
-<%= link_to 'Add New Bridge', new_marker_path %>
