--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,11 @@
 <center>
 <h1>Help</h1>
-
-<p> This application was designed to aid Heavy Goods Vehicles create a route based on the height of their vehicle.</p> <br />
-
+</center>
+  <div style="margin: 90px 0px 30px 290px; background-color: white; width: 700px; border: 2px solid Grey">
+<p> This application was designed to aid Heavy Goods Vehicles create a route based on the height of their vehicle. 
+	A user must create an account and add vehicle in order to create a route. The user then selects the vehicle they wish to use for their journey.
+</p><br/> <p> <center> <b>This application is accurate to within 0.1 Kilometers. </b></center></p><br />
+</div>
 <p>The map below shows a map containing every bridge location in the Republic of Ireland</p> <br />
 <%= image_tag("bridge1.png", :size => "350x450") %>
    
