updated vehcile edit page, added checkbox for trailer

--- a/app/views/markers/_form.html.erb
+++ b/app/views/markers/_form.html.erb
@@ -5,7 +5,7 @@
 
       <ul>
       <% @marker.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <div align="center"> <%= msg %> </div>
       <% end %>
       </ul>
     </div>
