--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,10 +39,10 @@ var contentString = '<div class="infowin">' +
         '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
          '<th scope="row">Address:</th>' +
-      '<td>' + "county" + '</td>' +
+      '<td>' + "<%= m.address %>" + '</td>' +
       '</tr>' +
       '<th scope="row">County:</th>' +
-      '<td>' + "ERROR" + '</td>' +
+      '<td>' + "<%= m.county %>" + '</td>' +
       '</tr>' + bridgeType +'</tr>' +
       '<th scope="row">Latitude:</th>' +
       '<td>' + <%= m.latitude %> + '<br />' +
