--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -52,7 +52,7 @@ function calcRoute() {
   var startPoint = document.getElementById("start").value
   var endPoint = document.getElementById("dest").value
   var stopPoint = document.getElementById("stop").value
-  var distance =  .01; 
+  var distance =  .1; 
 
   var request = {
     origin: startPoint,
@@ -186,7 +186,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
   </b><br>
   <div style="margin: 10px 0px 10px 700px; background-color: white; width: 200px; border: 2px solid Grey">
-  <p><b><span id="total"></span></b></p>
+  <p><b><span id="total", :placeholder => Route Details will load here </span></b></p>
   <p id="bridgeroute"><br /></p>
   <h5 id="h5style"><p id="bridgeroute2"></p></h5> 
   <h5 id="h5style"><p id="narrowbridge"></p></h5>
@@ -199,8 +199,5 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div id="directionsPanel" style="float:right;width:44%;height 90%"> </div>
   <div id="textFields" style="float:right;width:20%; height:90%"> </div>
  </center>
-<script type="text/javascript">
- document.write("Hey Ronan");
-</script>
 
 </body>
