added twitter feed from routeplannerpro

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,4 +47,5 @@
 </table> <br />
 
 <%= link_to 'Edit Profile', edit_user_path(@user) %> |
+<%= link_to 'Sign Out', signout_path %> |
 <%= link_to 'Home', pages_home_path %>
