--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -29,7 +29,7 @@
     <%= check_box_tag :truck %>
   </div>
 
-    <div id="ddd">
+    <div id="field">
     <%= f.label "Trailer Height(m)" %><br />
     <%= f.text_field :trailer %>
   </div>
