--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -195,9 +195,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </div>
   </form>
         <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
+        <input type="submit" value="Clear Page" onClick="window.location.reload()">
+
 
     <div id="directionsPanel" style="float:right;width:44%;height 90%"> </div>
   <div id="textFields" style="float:right;width:20%; height:90%"> </div>
  </center>
+
+  <div  style="float:left;width:45%; height:50%; margin:2%">
+ <a class="twitter-timeline" href="https://twitter.com/RoutePlannerPro" data-widget-id="459007661703303168">Tweets by @RoutePlannerPro</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 
 </body>
