--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -17,14 +17,6 @@ html {
     top:25px;  
 }  
 
-ul#menu li a {  
-    display: block;  
-    height:59px;  
-    overflow:hidden;  
-    text-indent:-99999px;  
-    background:transparent url(jch.jpg) no-repeat;  
-} 
-
 #content {
       background-image: url(jch.jpg);
    }
@@ -43,14 +35,31 @@ ul#menu li a {
 
 #mydiv2 {
   margin: 0 auto;
-  background-image: url(jch.jpg);
+  //background-image: url(jh1.jpg);
   background-color:#D8D8D8;
   background-repeat: no-repeat;
   background-size: 100%;
-
 }
+ul a {
+
+margin: 0px;
+padding: 0px;
+padding-right: 30px;
+padding-left: 50px;
+display: block;
+line-height: 17px;
+font-size: 17px;
+font-weight:bold;
+}
+
+ul {
+  margin: auto;
+  overflow: auto;
+  list-style-type: none;
+}
+/*sets colour of menu item on hover */
 li a:hover {
-  color: #FFFFFF;
+  color: #0B3861;
 }
 
 .pretty th .current {
@@ -65,7 +74,7 @@ li a:hover {
 
 #map-canvas, #directionsPanel {
 	overflow: hidden;
-	width: 670px;
+	width: 678px;
 	height:680px;
   margin: 7px;
   padding: 5px;
@@ -112,12 +121,6 @@ table.hovertable td, table.hovertable2 td{
 }
 
 
-
-ul {
-  margin: auto;
-  overflow: auto;
-  list-style-type: none;
-}
  
 li {
   height: 20px;
@@ -132,16 +135,7 @@ li a {
   text-transform: uppercase;
  
 }
-ul a {
 
-margin: 1px;
-padding: 1px;
-padding-right: 30px;
-padding-left: 70px;
-display: block;
-line-height: 20px;
-font-size: 15px;
-}
  
 #routeform label{
   display: inline-block; width: 190px; 
