--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<h1>Admin test page </h1>
+<center><h1>Admin test page </h1> </center
 <br>
 
  <head>
@@ -8,7 +8,6 @@
 
 
 <center>
-<h1>Plan you journey</h1>
 
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/routeboxer/src/RouteBoxer.js" type="text/javascript"></script>
