--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <center>
   <% if !signed_in? %>
-  Please sign in to plan your journey or <%= link_to "Sign up now!", new_user_path %> </li>
+  Please sign in to plan your journey or <h3><%= link_to "Sign up now!", new_user_path %></h3> </li>
   <% else %>
   <%end %>
  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
@@ -70,12 +70,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
  <body id="content2">
 
  <div id="map-canvas" style="float:center"> <br ></div>
-
- </center>
-
-</body>
-<center>
-
   <% if !signed_in? %>
   <% if !adminsigned_in? %>
 <%= link_to "Admin Log In", adminsignin_path %>
@@ -83,13 +77,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <%= link_to "Admin Log Out", adminsignout_path %>
 <% end %>
 <% else %>
-
   User must be logged out before admin can log in
-     <% end %>
-   
-  
-    
-</center>
+     <% end %> 
+  </body>
+ </center>
  <div  style="float:left;width:45%; height:50%; margin:2%">
   <a class="twitter-timeline" href="https://twitter.com/aaroadwatch" data-widget-id="433665295937327104" style="float:left;">Tweets by @aaroadwatch</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
