--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,14 +31,18 @@ Signed in as Admin <b><%= @current_admin.name %></b> <%= link_to "(Sign Out)", a
 	 	 <li><%= link_to "Sign In", signin_path %></li>
 	 	 <% else %>
 	 	 	<li><%= link_to "Sign Out", signout_path %></li>
+	 	 	
 	 	 <%end %>
 	 	 <li><%= link_to "Home", pages_home_path %></li>
 		 <li><%= link_to "Plan your Journey", pages_help_path %></li>
  		 <li><%= link_to "Bridge Locations", markers_path %></li>
  		 <li><%= link_to "About", about_path %></li>
- 		
-
 	</ul>
+	<div> <%= form_tag('/help') do %>
+		<%= select_tag "vehicles", options_from_collection_for_select(@vehicles, "id", "decription"), prompt: "Select your vehicle" %>
+		
+		<%= submit_tag 'Submit Vehicle' %> <br /></div>
+	<% end %>
 </div>
  <% else %>
  <ul>
